fix overflow

--- a/less/main.less
+++ b/less/main.less
@@ -51,15 +51,17 @@
 // Global Components
 
 html {
-  overflow-x: hidden;
-  width: 100%;
+  overflow-x: hidden !important;
+  width: 100vw !important;
 }
 
 body {
   margin: 0;
   height: 100%;
-  overflow-x: hidden;
+  overflow-x: hidden !important;
   float: none;
+    width: 100vw !important;
+
 }
 
 hr {
@@ -121,7 +123,6 @@ p {
     background-color: transparent;
     border-style: none;
     font-family: 'Montserrat', sans-serif !important;
-    max-width: 100%;
     .transition-all;
     .navbar-toggle, .navbar-toggle:focus{
         border: none;
